Endpoint for system conf
