# docs/swagger.yaml
@@ -241,27 +241,56 @@ definitions:
     properties:
       message: {}
     type: object
-  system.Configuration:
+  env.Config:
     properties:
+      backup_cron:
+        type: string
+      check_cron:
+        type: string
+      cleanup_cron:
+        type: string
+      healthcheck_url:
+        type: string
+      healthcheck_uuid:
+        type: string
+      identifier:
+        type: string
+      log_level:
+        enum:
+        - debug
+        - info
+        - warn
+        - error
+        - panic
+        - fatal
+        type: string
+      notification_url:
+        type: string
+      port:
+        maximum: 49151
+        minimum: 1024
+        type: integer
+      swagger_host:
+        type: string
+      time_zone:
+        type: string
+      version:
+        type: string
+    type: object
+  system.SystemConfig:
+    properties:
+      config:
+        $ref: '#/definitions/env.Config'
       hostname:
         type: string
       rclone_config_file:
         type: string
-    required:
-    - hostname
-    - rclone_config_file
-    type: object
-  system.Data:
-    properties:
-      configuration:
-        $ref: '#/definitions/system.Configuration'
-      job_stats:
-        $ref: '#/definitions/database.JobStats'
       versions:
         $ref: '#/definitions/system.Versions'
     required:
-    - configuration
-    - job_stats
+    - config
+    - hostname
+    - rclone_config_file
     - versions
     type: object
   system.Versions:
@@ -466,7 +495,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/system.Data'
+            $ref: '#/definitions/system.SystemConfig'
       tags:
       - system
   /system/logs:
@@ -480,6 +509,17 @@ paths:
             items:
               $ref: '#/definitions/database.SystemLog'
             type: array
+      tags:
+      - system
+  /system/stats:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/database.JobStats'
       tags:
       - system
 swagger: "2.0"
