# internal/controller/system.go
@@ -10,12 +10,21 @@ import (
 //	@Schemes
 //	@Tags		system
 //	@Produce	json
-//	@Success	200	{object}	system.Data
+//	@Success	200	{object}	system.SystemConfig
 //	@Router		/system [get]
 func (c *Controller) GetSystem(ctx echo.Context) error {
-	data := system.SystemData
-	data.Stats = c.service.GetJobStats()
-	return ctx.JSON(http.StatusOK, data)
+	config := system.SystemConf
+	config.Config = *c.env
+	return ctx.JSON(http.StatusOK, config)
+}
+
+//	@Schemes
+//	@Tags		system
+//	@Produce	json
+//	@Success	200	{object}	database.JobStats
+//	@Router		/system/stats [get]
+func (c *Controller) GetSystemStats(ctx echo.Context) error {
+	return ctx.JSON(http.StatusOK, c.service.GetJobStats())
 }
 
 //	@Schemes
